# Bounce

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  build_setup.txt  game_object.cpp  game_object.h  geometry.cpp  geometry.h  globals.h  level.yaml  level_editor.cpp  level_editor.h  main.cpp  terrain.cpp  terrain.h  texture_loader.h  todo.txt
core/: application.cpp  camera.cpp  camera.h  event_dispatcher.cpp  event_dispatcher.h  game_object.cpp  geometry.cpp  geometry.h  globals.h  level.cpp  level.h  terrain.cpp  terrain.h
dep_win/: i686-w64-mingw32.7z  x86_64-w64-mingw32.7z
dep_win/yaml-cpp/lib/release/: libyaml-cppmd.lib
doc/: build_setup.txt  cloc.sh  todo.txt
game/: collision_engine.cpp  collision_engine.h  game.cpp  game.h  live_camera.cpp  live_camera.h  live_level.cpp  live_level.h  live_terrain.cpp  live_terrain.h  main.cpp  player_ball.cpp  player_ball.h
level_editor/: editable_level.cpp  level_camera.h  level_editor.cpp  level_editor.h  main.cpp
lib/win/SDL2_ttf-2.0.15/include/SDL2/: SDL_ttf.h
old/: Makefile  collision_engine.cpp  collision_engine.h
resource/: level.yaml
src/: CMakeLists.txt  main_game.cpp  main_level_editor.cpp
src/core/: CMakeLists.txt  application.h  camera.cpp  camera.h  event_dispatcher.cpp  game_object.h  geometry.cpp  geometry.h  texture_loader.cpp
src/game/: CMakeLists.txt  collision_engine.cpp  game.cpp  game.h  live_camera.cpp  player_ball.cpp  player_ball.h
src/level_editor/: CMakeLists.txt  editable_level.h  level_camera.cpp  level_editor.cpp  level_editor.h
src/test/: CMakeLists.txt  test_core.cpp
